Fixed bug where footer text was not centered.

--- a/css/style.scss
+++ b/css/style.scss
@@ -248,5 +248,6 @@ footer {
 
   clear: both;
   font-family: Verdana, sans-serif, Helvetica;
+  text-align: justify;
   width: $page-width - 2 * $text-padding;
 }
